--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.28",
